# scalable-project

./: .env.example  .gitignore  README.md  basic_airport_weather.py  lastest_model.txt  pyproject.toml  teste_edge.py  weather_data.parquet
data/: arlanda_scenarios.json  yesterday_flights_weather.csv
src/: __init__.py  airport_coords_cache.json  app.py  daily_inference.py  daily_training.py  initial_dataset.py  initial_edge_data.py  initial_featuers.ipynb  plot_arlanda_flights.py  predict_delay.py  predict_live_delay.py  query_and_upload.py  subset_origins.py  test_api.py  test_schedules.py  test_script.py  train_model.ipynb
src/clients/: __init__.py  openmeteo.py  opensky.py
src/deployment/: daily_inference.py  daily_training.py  model_daily_run.py
src/utils/: helpers.py  weather.py
